update breadcrumbs & jumping issues

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -27,7 +27,7 @@
   width: 90px;
   font-family: 'Cabin-Regular', sans-serif; 
   position: absolute;
-  top: 25px;
+  top: 10px;
   right: 10px;
 }
 
@@ -389,10 +389,14 @@
 }
 
 .footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 85px;
+  width: 100%;
+  height: 80px;
   background: linear-gradient(to bottom, #05001C, #141F57);
   padding: 0 20px;
 }
@@ -441,6 +445,7 @@
 }
 
 @media (max-width: 800px) {
+
   .footer {
     flex-direction: column;
     height: auto; 
@@ -639,6 +644,17 @@ nav.thin-scrollbar {
   background-color: #ffffff;
 }
 
+.main-wrapper .container {
+  margin-bottom: 70px !important;
+}
+
+@media (max-width: 800px) {
+
+  .main-wrapper .container {
+    margin-bottom: 140px !important;
+  }
+}
+
 ul.table-of-contents > li > a {
   font-weight: 600;
   margin-bottom: -3px;
@@ -652,6 +668,7 @@ ul.table-of-contents > li > a {
 
 .col.col--3 > div {
   background-color: #FCFCFC;
+  height: 100%;
 }
 
 [data-theme='dark'] .col.col--3 {
@@ -811,7 +828,6 @@ nav.thin-scrollbar a {
 }
 
 .breadcrumbs {
-  display: none;
   margin-left: -8px;
 }
 
@@ -819,6 +835,10 @@ nav.thin-scrollbar a {
   display: none;
 }
 
+.breadcrumbs li:first-child:nth-last-child(2),
+.breadcrumbs li:first-child:nth-last-child(2) ~ li {
+  display: none;
+}
 
 .menu__list-item-collapsible{
   display: none;
@@ -830,6 +850,10 @@ nav.thin-scrollbar a {
 
 .pagination-nav {
   display: none;
+}
+
+.theme-doc-markdown {
+  margin-top: -10px;
 }
 
 .theme-doc-markdown header > h1 {
@@ -946,6 +970,7 @@ nav.thin-scrollbar a {
 .theme-doc-markdown h2{
   font-size: 40px;
   font-weight: 600;
+  margin-top: 0px;
   margin-bottom: 40px;
 }
 
@@ -1115,9 +1140,6 @@ code {
   padding-right: 30px;
 }
 
-.thin-scrollbar {
-  scrollbar-width: auto;
-}
 
 @media (pointer: fine) {
   .thin-scrollbar {
